Project

General

Profile

Actions

Bug #43269

closed

rgw: lc: continue past get_obj_state() failure

Added by Matt Benjamin over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The get_obj_state() failure in particular could indicate a race with
an object being deleted, so likely is non-fatal. By returning, lifecycle
processing for the current bi-shard would not resume until re-scheduled,
likely in 24 hours.

Actions #1

Updated by Matt Benjamin over 4 years ago

  • Pull request ID set to 32194
Actions #2

Updated by Matt Benjamin over 4 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF