rgw: lc: continue past decode-tagset and get_obj_state() failure

The get_obj_state() failure in particular could indicate a race with
an object being deleted, so likely is non-fatal.  By returning, lifecycle
processing for the current bi-shard would not resume until re-scheduled,
likely in 24 hours.

Fixes: https://tracker.ceph.com/issues/43269
Resolves: rhbz#1775438

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
(cherry picked from commit f9dd562c97a657e1071b5d6f290cc1a9c1830632)